# eroxii-agent

./: .gitignore  main.py  pyproject.toml
app/: __init__.py
app/agent/: alpr_agent.py  ocr_agent.py
app/core/: config.py  logger.py
app/mcp/: alpr_server.py  http_server.py  ocr_server.py
app/middleware/: response_middleware.py
app/schema/: base_schema.py
app/utils/: tz_utils.py
bot/: telegram_bot.py
tests/: test_paddle.py
